Incluir parâmetros de configuração